fix: edit album's input was too big

--- a/src/styles/topbar.styl
+++ b/src/styles/topbar.styl
@@ -39,7 +39,7 @@ $coz-bar-size = 48px
     font-size(24px)
 
     input[type=text]
-        padding 0.4em 0.3em 0.3em 0.4em
+        padding 0.17em 0.3em 0.17em 0.4em
         max-width 100%
 
     @media (max-width: (768/basefont)rem)
